# client-pln

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Justfile  migrate_neon.sql  migrate_neon_clean.sql  migrate_neon_safe.sql  render.yaml
app/: .env.example  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/app/: layout.tsx  page.tsx
app/src/app/admin/: page.tsx
app/src/app/beban/: page.tsx  page.tsx.new
app/src/app/gangguan/: page.tsx
app/src/app/laporan/: page.tsx
app/src/app/sync/: page.tsx
app/src/shared/components/: app-sidebar.tsx  chart-area-interactive.tsx  dashboard-shell.tsx  data-table.tsx  nav-documents.tsx  nav-main.tsx  nav-user.tsx  offline-status.tsx  section-cards.tsx  site-header.tsx
app/src/shared/lib/: api.ts  (+8 more)
infra/docker/: docker-compose.yml
services/api/: Cargo.toml  Dockerfile
services/api/src/: bootstrap.rs  main.rs  router.rs
services/api/src/auth/: jwt.rs  mod.rs  password.rs
services/api/src/graphql/: mutation.rs  query.rs  schema.rs
services/api/src/migrations/: 20260305102520_init_schema.sql
services/api/src/models/: bay.rs  beban.rs  beban_record.rs  classification.rs  mod.rs  unit.rs  unit_category.rs  unit_type.rs  user.rs
services/api/src/repositories/: bay_repository.rs  beban_record_repository.rs  beban_repository.rs  classification_repository.rs  mod.rs  unit_category_repository.rs  unit_repository.rs  unit_type_repository.rs  user_repository.rs
(+23 files in other folders)
