[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../../packages/database" }

async-graphql = { version = "7.2.1", features = ["chrono"] }
async-graphql-axum = "7.2.1"
axum = "0.8.8"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5.3"
password-hash = "0.5.0"
tower-http = { version = "0.6.2", features = ["cors", "compression-gzip", "compression-deflate", "compression-br"] }
chrono = { version = "0.4", features = ["serde"] }
